4차-score collection 반영

--- a/templates/levelselect.html
+++ b/templates/levelselect.html
@@ -200,8 +200,8 @@
                 '아이스크림': 'icecream.jpg',
                 '장미': 'rose.jpg',
                 '과일': 'fruits.jpg',
-                '랜덤': 'random.jpg', // 랜덤 이미지 예시
-                '나만퀴(나만의 퀴즈 만들기)': 'question.png' // 나만퀴 이미지 예시
+                '랜덤': 'random.jpg',
+                '나만퀴(나만의 퀴즈 만들기)': 'question.png'
             };
 
             if (category && categoryData[category]) {
